--- a/LCA-layouts/LCA-layouts.vcxproj.filters
+++ b/LCA-layouts/LCA-layouts.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="DocPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Generator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
