--- a/LCA-layouts/LCA-layouts.vcxproj.filters
+++ b/LCA-layouts/LCA-layouts.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
