--- a/LCA-layouts/LCA-layouts.vcxproj.filters
+++ b/LCA-layouts/LCA-layouts.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnalyzeDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
